--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
