--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.1",
