--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0"
