--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "aos": "^3.0.0-beta.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.1",
